<resources>
    <string name="app_name">Number le</string>
    <string translatable="false" name="fb_app_id">205084973308016</string>

    <!-- Xml Strings -->
    <string name="tv_password">Password</string>
    <string name="tv_username">Username</string>
    <string name="button_settings">Settings</string>
    <string name="button_favorites">Favorites</string>
    <string name="button_cancel">Cancel</string>
    <string name="menu_cart">Cart</string>
    <string name="text_register">Register</string>
    <string name="text_nick_name">Nick Name</string>
    <string name="button_signIn">SignIn</string>
    <string name="button_signUp">SignUp</string>
    <string name="text_sign_in_msg">Sign in with below</string>
    <string name="button_register">Register</string>
    <string name="button_book">Book</string>
    <string name="menu_def_date">23</string>
    <string name="toast_auth_failed">Authentication failed!!!</string>
    <string name="empty_string">No Appointment.</string>
    <string name="text_appointments">Appointments</string>
    <string name="button_logout">Logout</string>

    <!-- Content Description -->
    <string name="desc_app_logo">App Logo</string>
    <string name="desc_google_login">Google Login</string>
    <string name="desc_facebook_login">Facebook login</string>
    <string name="desc_shop_banner">Shop Banner</string>
    <string name="desc_search_shops">Search Nearby Shops</string>
    <string name="desc_slot_image">Slot Image</string>
    <string name="desc_add_product">Add Product</string>
    <string name="desc_confirm_slot">Confirm Slot</string>
    <string name="desc_shop_location_on_map">Shop Location On Map</string>
    <string name="desc_shop_logo">Shop Logo</string>
    <string name="text_no_appointments">No Appointments For Today</string>
    <string name="desc_done">Done</string>
</resources>
